cs101_information_objects.nim


proc IntegratedTotalsWithCP24Time2a_create*(self: IntegratedTotalsWithCP24Time2a;
    ioa: cint; value: BinaryCounterReading; timestamp: CP24Time2a): IntegratedTotalsWithCP24Time2a {.
    importc: "IntegratedTotalsWithCP24Time2a_create",  cdecl.}
proc IntegratedTotalsWithCP24Time2a_destroy*(self: IntegratedTotalsWithCP24Time2a) {.
    importc: "IntegratedTotalsWithCP24Time2a_destroy",  cdecl.}
proc IntegratedTotalsWithCP24Time2a_getTimestamp*(
    self: IntegratedTotalsWithCP24Time2a): CP24Time2a {.
    importc: "IntegratedTotalsWithCP24Time2a_getTimestamp",  cdecl.}
proc IntegratedTotalsWithCP24Time2a_setTimestamp*(
    self: IntegratedTotalsWithCP24Time2a; value: CP24Time2a) {.
    importc: "IntegratedTotalsWithCP24Time2a_setTimestamp",  cdecl.}
## **********************************************************************
##  IntegratedTotalsWithCP56Time2a : IntegratedTotals
## *********************************************************************

type
  IntegratedTotalsWithCP56Time2a* = ptr sIntegratedTotalsWithCP56Time2a

## *
##  \brief Create a new instance of IntegratedTotalsWithCP56Time2a information object
##
##  For message type: M_IT_TB_1 (37)
##
##  \param self Reference to an existing instance to reuse, if NULL a new instance will we dynamically allocated
##  \param ioa Information object address
##  \param value binary counter reading value and state
##  \param timestamp timestamp of the reading
##
##  \return Reference to the new instance
##

proc IntegratedTotalsWithCP56Time2a_create*(self: IntegratedTotalsWithCP56Time2a;
    ioa: cint; value: BinaryCounterReading; timestamp: CP56Time2a): IntegratedTotalsWithCP56Time2a {.
    importc: "IntegratedTotalsWithCP56Time2a_create",  cdecl.}
proc IntegratedTotalsWithCP56Time2a_destroy*(self: IntegratedTotalsWithCP56Time2a) {.
    importc: "IntegratedTotalsWithCP56Time2a_destroy",  cdecl.}
proc IntegratedTotalsWithCP56Time2a_getTimestamp*(
    self: IntegratedTotalsWithCP56Time2a): CP56Time2a {.
    importc: "IntegratedTotalsWithCP56Time2a_getTimestamp",  cdecl.}
proc IntegratedTotalsWithCP56Time2a_setTimestamp*(
    self: IntegratedTotalsWithCP56Time2a; value: CP56Time2a) {.
    importc: "IntegratedTotalsWithCP56Time2a_setTimestamp",  cdecl.}
## **********************************************************************
##  EventOfProtectionEquipment : InformationObject
## *********************************************************************

type
  EventOfProtectionEquipment* = ptr sEventOfProtectionEquipment

proc EventOfProtectionEquipment_destroy*(self: EventOfProtectionEquipment) {.
    importc: "EventOfProtectionEquipment_destroy",  cdecl.}
proc EventOfProtectionEquipment_create*(self: EventOfProtectionEquipment;
                                       ioa: cint; event: SingleEvent;
                                       elapsedTime: CP16Time2a;
                                       timestamp: CP24Time2a): EventOfProtectionEquipment {.
    importc: "EventOfProtectionEquipment_create",  cdecl.}
proc EventOfProtectionEquipment_getEvent*(self: EventOfProtectionEquipment): SingleEvent {.
    importc: "EventOfProtectionEquipment_getEvent",  cdecl.}
proc EventOfProtectionEquipment_getElapsedTime*(self: EventOfProtectionEquipment): CP16Time2a {.
    importc: "EventOfProtectionEquipment_getElapsedTime",  cdecl.}
proc EventOfProtectionEquipment_getTimestamp*(self: EventOfProtectionEquipment): CP24Time2a {.
    importc: "EventOfProtectionEquipment_getTimestamp",  cdecl.}
## **********************************************************************
##  PackedStartEventsOfProtectionEquipment : InformationObject
## *********************************************************************

type
  PackedStartEventsOfProtectionEquipment* = ptr sPackedStartEventsOfProtectionEquipment

proc PackedStartEventsOfProtectionEquipment_create*(
    self: PackedStartEventsOfProtectionEquipment; ioa: cint; event: StartEvent;
    qdp: QualityDescriptorP; elapsedTime: CP16Time2a; timestamp: CP24Time2a): PackedStartEventsOfProtectionEquipment {.
    importc: "PackedStartEventsOfProtectionEquipment_create",  cdecl.}
proc PackedStartEventsOfProtectionEquipment_destroy*(
    self: PackedStartEventsOfProtectionEquipment) {.
    importc: "PackedStartEventsOfProtectionEquipment_destroy",  cdecl.}
proc PackedStartEventsOfProtectionEquipment_getEvent*(
    self: PackedStartEventsOfProtectionEquipment): StartEvent {.
    importc: "PackedStartEventsOfProtectionEquipment_getEvent",  cdecl.}
proc PackedStartEventsOfProtectionEquipment_getQuality*(
    self: PackedStartEventsOfProtectionEquipment): QualityDescriptorP {.
    importc: "PackedStartEventsOfProtectionEquipment_getQuality",
     cdecl.}
proc PackedStartEventsOfProtectionEquipment_getElapsedTime*(
    self: PackedStartEventsOfProtectionEquipment): CP16Time2a {.
    importc: "PackedStartEventsOfProtectionEquipment_getElapsedTime",
     cdecl.}
proc PackedStartEventsOfProtectionEquipment_getTimestamp*(
    self: PackedStartEventsOfProtectionEquipment): CP24Time2a {.
    importc: "PackedStartEventsOfProtectionEquipment_getTimestamp",
     cdecl.}
## **********************************************************************
##  PacketOutputCircuitInfo : InformationObject
## *********************************************************************

type
  PackedOutputCircuitInfo* = ptr sPackedOutputCircuitInfo

proc PackedOutputCircuitInfo_destroy*(self: PackedOutputCircuitInfo) {.
    importc: "PackedOutputCircuitInfo_destroy",  cdecl.}
proc PackedOutputCircuitInfo_create*(self: PackedOutputCircuitInfo; ioa: cint;
                                    oci: OutputCircuitInfo;
                                    qdp: QualityDescriptorP;
                                    operatingTime: CP16Time2a;
                                    timestamp: CP24Time2a): PackedOutputCircuitInfo {.
    importc: "PackedOutputCircuitInfo_create",  cdecl.}
proc PackedOutputCircuitInfo_getOCI*(self: PackedOutputCircuitInfo): OutputCircuitInfo {.
    importc: "PackedOutputCircuitInfo_getOCI",  cdecl.}
proc PackedOutputCircuitInfo_getQuality*(self: PackedOutputCircuitInfo): QualityDescriptorP {.
    importc: "PackedOutputCircuitInfo_getQuality",  cdecl.}
proc PackedOutputCircuitInfo_getOperatingTime*(self: PackedOutputCircuitInfo): CP16Time2a {.
    importc: "PackedOutputCircuitInfo_getOperatingTime",  cdecl.}
proc PackedOutputCircuitInfo_getTimestamp*(self: PackedOutputCircuitInfo): CP24Time2a {.
    importc: "PackedOutputCircuitInfo_getTimestamp",  cdecl.}
## **********************************************************************
##  PackedSinglePointWithSCD : InformationObject
## *********************************************************************

type
  PackedSinglePointWithSCD* = ptr sPackedSinglePointWithSCD

proc PackedSinglePointWithSCD_destroy*(self: PackedSinglePointWithSCD) {.
    importc: "PackedSinglePointWithSCD_destroy",  cdecl.}
proc PackedSinglePointWithSCD_create*(self: PackedSinglePointWithSCD; ioa: cint;
                                     scd: StatusAndStatusChangeDetection;
                                     qds: QualityDescriptor): PackedSinglePointWithSCD {.
    importc: "PackedSinglePointWithSCD_create",  cdecl.}
proc PackedSinglePointWithSCD_getQuality*(self: PackedSinglePointWithSCD): QualityDescriptor {.
    importc: "PackedSinglePointWithSCD_getQuality",  cdecl.}
proc PackedSinglePointWithSCD_getSCD*(self: PackedSinglePointWithSCD): StatusAndStatusChangeDetection {.
    importc: "PackedSinglePointWithSCD_getSCD",  cdecl.}
## ******************************************
##  SingleCommand
## *****************************************

type
  SingleCommand* = ptr sSingleCommand

## *
##  \brief Create a single point command information object
##
##  \param[in] self existing instance to reuse or NULL to create a new instance
##  \param[in] ioa information object address
##  \param[in] command the command value
##  \param[in] selectCommand (S/E bit) if true send "select", otherwise "execute"
##  \param[in] qu qualifier of command QU parameter(0 = no additional definition, 1 = short pulse, 2 = long pulse, 3 = persistent output)
##
##  \return the initialized instance
##

proc SingleCommand_create*(self: SingleCommand; ioa: cint; command: bool;
                          selectCommand: bool; qu: cint): SingleCommand {.
    importc: "SingleCommand_create",  cdecl.}
proc SingleCommand_destroy*(self: SingleCommand) {.
    importc: "SingleCommand_destroy",  cdecl.}
## *
##  \brief Get the qualifier of command QU value
##
##  \return the QU value (0 = no additional definition, 1 = short pulse, 2 = long pulse, 3 = persistent output, > 3 = reserved)
##

proc SingleCommand_getQU*(self: SingleCommand): cint {.
    importc: "SingleCommand_getQU",  cdecl.}
## *
##  \brief Get the state (command) value
##

proc SingleCommand_getState*(self: SingleCommand): bool {.
    importc: "SingleCommand_getState",  cdecl.}
## *
##  \brief Return the value of the S/E bit of the qualifier of command
##
##  \return S/E bit, true = select, false = execute
##

proc SingleCommand_isSelect*(self: SingleCommand): bool {.
    importc: "SingleCommand_isSelect",  cdecl.}
## **********************************************************************
##  SingleCommandWithCP56Time2a : SingleCommand
## *********************************************************************

type
  SingleCommandWithCP56Time2a* = ptr sSingleCommandWithCP56Time2a

proc SingleCommandWithCP56Time2a_destroy*(self: SingleCommandWithCP56Time2a) {.
    importc: "SingleCommandWithCP56Time2a_destroy",  cdecl.}
## *
##  \brief Create a single command with CP56Time2a time stamp information object
##
##  \param[in] self existing instance to reuse or NULL to create a new instance
##  \param[in] ioa information object address
##  \param[in] command the command value
##  \param[in] selectCommand (S/E bit) if true send "select", otherwise "execute"
##  \param[in] qu qualifier of command QU parameter(0 = no additional definition, 1 = short pulse, 2 = long pulse, 3 = persistent output)
##  \param[in] timestamp the time stamp value
##
##  \return the initialized instance
##

proc SingleCommandWithCP56Time2a_create*(self: SingleCommandWithCP56Time2a;
                                        ioa: cint; command: bool;
                                        selectCommand: bool; qu: cint;
                                        timestamp: CP56Time2a): SingleCommandWithCP56Time2a {.
    importc: "SingleCommandWithCP56Time2a_create",  cdecl.}
## *
##  \brief Get the time stamp of the command.
##
##  NOTE: according to the specification the command shall not be accepted when the time stamp differs too much
##  from the time of the receiving system. In this case the command has to be discarded silently.
##
##  \return the time stamp of the command
##

proc SingleCommandWithCP56Time2a_getTimestamp*(self: SingleCommandWithCP56Time2a): CP56Time2a {.
    importc: "SingleCommandWithCP56Time2a_getTimestamp",  cdecl.}
## ******************************************
##  DoubleCommand : InformationObject
## *****************************************

type
  DoubleCommand* = ptr sDoubleCommand

proc DoubleCommand_destroy*(self: DoubleCommand) {.
    importc: "DoubleCommand_destroy",  cdecl.}
## *
##  \brief Create a double command information object
##
##  \param[in] self existing instance to reuse or NULL to create a new instance
##  \param[in] ioa information object address
##  \param[in] command the double command state (0 = not permitted, 1 = off, 2 = on, 3 = not permitted)
##  \param[in] selectCommand (S/E bit) if true send "select", otherwise "execute"
##  \param[in] qu qualifier of command QU parameter(0 = no additional definition, 1 = short pulse, 2 = long pulse, 3 = persistent output)
##
##  \return the initialized instance
##
